[gd_scene load_steps=2 format=3 uid="uid://cju00lpxwcynu"]

[ext_resource type="Script" uid="uid://coqugwqy7khr7" path="res://scripts/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="RoomList" type="ItemList" parent="."]
layout_mode = 0

[node name="RefreshButton" type="Button" parent="."]
layout_mode = 0
text = "Refresh"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
text = "Join"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
text = "Select a room and join."

[node name="HTTPRequest" type="HTTPRequest" parent="."]
